Add a uniform /health endpoint to the Python, JavaScript and Java applications
Each of the three applications now exposes GET /health, returning a compact JSON
document carrying the application name, its version, the current UTC timestamp
and a status of "UP". Every implementation gains a --serve mode that starts the
listener and a --probe mode that checks the endpoint in process and exits 0 when
healthy or 1 when not, so a container health check needs no HTTP client of its
own. Name, version, health path, bind host and per-language port are resolved
from app.config.properties with environment variables taking precedence, so all
three report identical values from a single source of truth.

The default invocation of every application is unchanged. app.py still prints
"Hello Lakshya", index.js still writes 12 five times and User still prints
"Test", each byte for byte and with the same exit status; all server logging goes
to standard error so standard output remains the legacy contract.

Two defects that made their files unusable are fixed here. app.py contained a
second, mis-indented __main__ block that raised IndentationError before any code
could run, and User.java declared public class User twice, which prevented
compilation. Both now compile cleanly, and index.js additionally exports its
functions and moves its console output behind a main-module guard so it can be
imported without side effects.

Requests are validated for the first time: an unknown path returns 404 and any
method other than GET returns 405 with an Allow header, both with JSON bodies.
Responses carry no-store cache directives, and no server banner or runtime
version is disclosed.